Tooltip tweaks and fixes for overflow content

--- a/docs/assets/theme.css
+++ b/docs/assets/theme.css
@@ -7486,12 +7486,28 @@ section.adx-podcast-wide audio {
   margin-left: -60px;
   /* Fade in tooltip - takes 1 second to go from 0% to 100% opac: */
   opacity: 0;
-  transition: opacity 1s;
+  transition: opacity 0.4s;
 }
 
 .tooltip:hover .tooltiptext {
   visibility: visible;
   opacity: 1;
+}
+
+.tooltip .tooltiptext::after {
+  content: " ";
+  position: absolute;
+  top: 100%;
+  /* At the bottom of the tooltip */
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: black transparent transparent transparent;
+}
+
+.pages.show .show-content {
+  overflow-x: unset !important;
 }
 
 .icon-grid {
